--- a/public/themes/admin/default/admin/statistics/track.html
+++ b/public/themes/admin/default/admin/statistics/track.html
@@ -3,18 +3,19 @@
 <body>
 <div class="wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a>商品兑换列表</a></li>
+        <li class="active"><a>足迹活动参与列表</a></li>
     </ul>
     <form method="post" class="js-ajax-form margin-top-20">
         <table class="table table-hover table-bordered">
             <thead>
             <tr>
                 <th>ID</th>
-                <th>商品名称</th>
+                <th>活动名称</th>
                 <th>会员名称</th>
-                <th>兑换者姓名</th>
-                <th>兑换者手机号</th>
-                <th>消耗积分</th>
+                <th>服务开始时间</th>
+                <th>服务结束时间</th>
+                <th>服务时长</th>
+                <th>获得积分</th>
                 <th>创建时间</th>
             </tr>
             </thead>
@@ -22,14 +23,17 @@
                 <foreach name="actions" id="vo">
                     <php>
                         $more = json_decode($vo['more'], true);
+                        $join_end_time = empty($more['join_end_time']) ? 0 : $more['join_end_time'];
+                        $server_time = empty($more['join_end_time']) ? 2 : round(($more['join_end_time'] - $more['join_start_time']) / 3600);
                     </php>
                     <tr>
                         <td>{$vo.id}</td>
                         <td>{$vo.post_title}</td>
                         <td>{$vo.user_nickname}</td>
-                        <td>{$more.username}</td>
-                        <td>{$more.phone}</td>
-                        <td>{$vo.score}</td>
+                        <td>{:date('Y-m-d H:i', $more.join_start_time)}</td>
+                        <td>{$join_end_time}</td>
+                        <td>{$server_time}</td>
+                        <td>{$server_time * $vo.score}</td>
                         <td>{:date('Y-m-d H:i', $vo.create_time)}</td>
                     </tr>
                 </foreach>
