--- a/public/themes/admin/default/admin/statistics/wish.html
+++ b/public/themes/admin/default/admin/statistics/wish.html
@@ -3,17 +3,17 @@
 <body>
 <div class="wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a>商品兑换列表</a></li>
+        <li class="active"><a>心愿实现列表</a></li>
     </ul>
     <form method="post" class="js-ajax-form margin-top-20">
         <table class="table table-hover table-bordered">
             <thead>
             <tr>
                 <th>ID</th>
-                <th>商品名称</th>
+                <th>心愿名称</th>
                 <th>会员名称</th>
-                <th>兑换者姓名</th>
-                <th>兑换者手机号</th>
+                <th>实现者姓名</th>
+                <th>实现者手机号</th>
                 <th>消耗积分</th>
                 <th>创建时间</th>
             </tr>
