--- a/public/themes/admin/default/portal/admin_article/edit_coles.html
+++ b/public/themes/admin/default/portal/admin_article/edit_coles.html
@@ -49,7 +49,7 @@
                                    name="post[categories]"/>
                             <input class="form-control" type="hidden" value="coles"
                                    name="post[type]"/>
-                            <input class="form-control" type="hidden" value="3"
+                            <input class="form-control" type="hidden" value="{$post.post_type}"
                                    name="post[post_type]"/>
                         </td>
                     </tr>
