--- a/public/themes/admin/default/portal/admin_article/edit_dynamic.html
+++ b/public/themes/admin/default/portal/admin_article/edit_dynamic.html
@@ -49,6 +49,8 @@
                                    name="post[categories]"/>
                             <input class="form-control" type="hidden" value="dynamic"
                                    name="post[type]"/>
+                            <input class="form-control" type="hidden" value="{$post.post_type}"
+                                   name="post[post_type]"/>
                         </td>
                     </tr>
                     <tr>
