--- a/public/themes/mobile/default/portal/card.html
+++ b/public/themes/mobile/default/portal/card.html
@@ -15,7 +15,7 @@
     </header>
     <div class="mui-content">
         <php>
-            $top_slide_id = empty('top_slide') ? 1 : $theme_vars['top_slide'];
+            $top_slide_id = empty($theme_vars['top_slide']) ? 1 : $theme_vars['top_slide'];
         </php>
         <div id="slider" class="mui-slider" >
             <div class="mui-slider-group">
