--- a/public/themes/admin/default/admin/statistics/card.html
+++ b/public/themes/admin/default/admin/statistics/card.html
@@ -3,7 +3,7 @@
 <body>
 <div class="wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a>商品兑换列表</a></li>
+        <li class="active"><a>一卡通兑换列表</a></li>
     </ul>
     <form method="post" class="js-ajax-form margin-top-20">
         <table class="table table-hover table-bordered">
