--- a/public/themes/admin/default/portal/admin_article/edit_wish.html
+++ b/public/themes/admin/default/portal/admin_article/edit_wish.html
@@ -29,11 +29,11 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li><a href="{:url('AdminArticle/card', array('category' => $postCategoryIds, 'type'=> 7))}">所有合作商家</a></li>
+        <li><a href="{:url('AdminArticle/wish', array('category' => $postCategoryIds, 'type'=> $post['post_type']))}">所有心愿</a></li>
         <li>
-            <a href="{:url('AdminArticle/add_card', array('category' => $postCategoryIds, 'type'=> 7))}">添加合作商家</a>
+            <a href="{:url('AdminArticle/add_wish', array('category' => $postCategoryIds, 'type'=> $post['post_type']))}">添加心愿</a>
         </li>
-        <li class="active"><a href="#">编辑合作商家</a></li>
+        <li class="active"><a href="#">编辑心愿</a></li>
     </ul>
     <form action="{:url('AdminArticle/editPost')}" method="post" class="form-horizontal js-ajax-form margin-top-20">
         <div class="row">
@@ -47,48 +47,34 @@
                                    readonly/>
                             <input class="form-control" type="hidden" value="{$postCategoryIds}"
                                    name="post[categories]"/>
-                            <input class="form-control" type="hidden" value="track"
+                            <input class="form-control" type="hidden" value="wish"
                                    name="post[type]"/>
                             <input class="form-control" type="hidden" value="{$post.post_type}"
                                    name="post[post_type]"/>
                         </td>
                     </tr>
                     <tr>
-                        <th><eq name="$post.post_type" value="7">商家</eq>名称<span class="form-required">*</span></th>
+                        <th>心愿名称<span class="form-required">*</span></th>
                         <td>
                             <input id="post-id" type="hidden" name="post[id]" value="{$post.id}">
                             <input class="form-control" type="text" name="post[post_title]"
-                                   id="title" required value="{$post.post_title}" placeholder="请输入商家名称"/>
+                                   id="title" required value="{$post.post_title}" placeholder="请输入心愿名称"/>
                         </td>
                     </tr>
-                    <if condition="$post['post_type'] eq 6">
-                        <tr>
-                            <th>兑换积分<span class="form-required">*</span></th>
-                            <td>
-                               <input class="form-control" type="text" name="post[score]" style="width:300px;"
-                                       id="title" required value="{$post.score}" placeholder="兑换积分"/>
-                            </td>
-                        </tr>
-                    <else/>
-                        <tr>
-                            <th>优惠政策<span class="form-required">*</span></th>
-                            <td>
-                               <input class="form-control" type="text" name="post[more][preferential]" style="width:300px;"
-                                       id="title" required value="{$post.more.preferential}" placeholder="请输入商家优惠政策"/>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>商家地点</th>
-                            <td>
-                                <div style="display: inline-block;">
-                                    <input class="form-control" type="text" id="address" name="post[more][address]" style="width:500px;" required
-                                       value="{$post.more.address}" placeholder="详细地址" 
-                                       readonly/>
-                                </div>
-                                <a href="javascript:parent.openIframeLayer('{:url('AdminArticle/location')}','活动地址',{area: ['35%', '70%'], btn:['确认','关闭'], yes: function(index) {setLocation(index);}});" class="btn btn-default" style="position: relative; top: -3px; left: 45px;">获取活动地点</a>
-                            </td>
-                        </tr>
-                    </if>
+                    <tr>
+                        <th>心愿摘要<span class="form-required">*</span></th>
+                        <td>
+                            <input class="form-control" type="text" name="post[post_excerpt]"
+                                   id="title" required value="{$post.post_excerpt}" placeholder="请输入心愿摘要"/>
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>实现积分<span class="form-required">*</span></th>
+                        <td>
+                           <input class="form-control" type="text" name="post[score]" style="width:300px;"
+                                   id="title" required value="{$post.score}" placeholder="实现心愿所需积分"/>
+                        </td>
+                    </tr>
                     <tr>
                         <th>内容</th>
                         <td>
@@ -158,6 +144,17 @@
                                    value="{:date('Y-m-d H:i',$post['published_time'])}">
                         </td>
                     </tr>
+                    <!--
+                    <tr>
+                        <th>评论</th>
+                    </tr>
+                    <tr>
+                        <td>
+                            <label style="width: 88px"><a
+                                    href="javascript:openIframeDialog('{:url('comment/commentadmin/index',array('post_id'=>$post['id']))}','评论列表')">查看评论</a></label>
+                        </td>
+                    </tr>
+                    -->
                     <tr>
                         <th>状态</th>
                         <php>
@@ -226,9 +223,8 @@
 </script>
 <script type="text/javascript" src="__STATIC__/js/ueditor/ueditor.config.js"></script>
 <script type="text/javascript" src="__STATIC__/js/ueditor/ueditor.all.min.js"></script>
-<script>
-
-     $(function () {
+<script type="text/javascript">
+    $(function () {
 
         editorcontent = new baidu.editor.ui.Editor();
         editorcontent.render('content');
@@ -244,6 +240,31 @@
 
         $('#more-template-select').val("{$post.more.template|default=''}");
     });
+
+    function doSelectCategory() {
+        var selectedCategoriesId = $('#js-categories-id-input').val();
+        openIframeLayer("{:url('AdminCategory/select')}?ids=" + selectedCategoriesId, '请选择分类', {
+            area: ['700px', '400px'],
+            btn: ['确定', '取消'],
+            yes: function (index, layero) {
+                //do something
+
+                var iframeWin          = window[layero.find('iframe')[0]['name']];
+                var selectedCategories = iframeWin.confirm();
+                if (selectedCategories.selectedCategoriesId.length == 0) {
+                    layer.msg('请选择分类');
+                    return;
+                }
+                $('#js-categories-id-input').val(selectedCategories.selectedCategoriesId.join(','));
+                $('#js-categories-name-input').val(selectedCategories.selectedCategoriesName.join(' '));
+                //console.log(layer.getFrameIndex(index));
+                layer.close(index); //如果设定了yes回调，需进行手工关闭
+            }
+        });
+    }
+</script>
+
+<script>
 
     var publishYesUrl = "{:url('AdminArticle/publish',array('yes'=>1))}";
     var publishNoUrl = "{:url('AdminArticle/publish',array('no'=>1))}";
@@ -336,8 +357,6 @@
         var res = parent.window["layui-layer-iframe" + index].callbackdata();
 
         $('#address').val(res.poiaddress+res.poiname);
-        $('#lat').val(res.latlng.lat);
-        $('#lng').val(res.latlng.lng);
 
         parent.layer.close(index);
     }
