--- a/public/themes/admin/default/portal/admin_article/wish.html
+++ b/public/themes/admin/default/portal/admin_article/wish.html
@@ -3,10 +3,10 @@
 <body>
 <div class="wrap js-check-wrap">
     <ul class="nav nav-tabs">
-        <li class="active"><a href="javascript:;">所有动态</a></li>
-        <li><a href="{:url('AdminArticle/add_dynamic', array('category' => $category, 'type'=> $postType))}">添加动态</a></li>
+        <li class="active"><a href="javascript:;">所有心愿</a></li>
+        <li><a href="{:url('AdminArticle/add_wish', array('category' => $category, 'type'=> $postType))}">添加心愿</a></li>
     </ul>
-    <form class="well form-inline margin-top-20" method="post" action="{:url('AdminArticle/dynamic')}">
+    <form class="well form-inline margin-top-20" method="post" action="{:url('AdminArticle/wish')}">
         时间:
         <input type="text" class="form-control js-bootstrap-datetime" name="start_time"
                value="{$start_time|default=''}"
@@ -18,7 +18,7 @@
         <input type="text" class="form-control" name="keyword" style="width: 200px;"
                value="{$keyword|default=''}" placeholder="请输入关键字...">
         <input type="submit" class="btn btn-primary" value="搜索"/>
-        <a class="btn btn-danger" href="{:url('AdminArticle/dynamic')}">清空</a>
+        <a class="btn btn-danger" href="{:url('AdminArticle/wish')}">清空</a>
     </form>
     <form class="js-ajax-form" action="" method="post">
         <div class="table-actions">
@@ -68,10 +68,9 @@
                     <th width="50">{:lang('SORT')}</th>
                 </notempty>
                 <th width="50">ID</th>
-                <th>活动名称</th>
-                <th width="100">活动日期</th>
+                <th>心愿名称</th>
                 <!--  -->
-                <th width="90">奖励积分</th>
+                <th width="90">实现积分</th>
                 <th width="160">缩略图</th>
                 <th width="130">更新时间</th>
                 <th width="130">发布时间</th>
@@ -101,7 +100,6 @@
                                target="_blank">{$vo.post_title}</a>
                         </notempty>
                     </td>
-                    <td>{$vo.more.active_date}</td>
                     <td>{$vo.score|default=0}</td>
                     <td>
                         <notempty name="vo.more.thumbnail">
@@ -142,7 +140,7 @@
                         </notempty>
                     </td>
                     <td>
-                        <a href="{:url('AdminArticle/edit_dynamic',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
+                        <a href="{:url('AdminArticle/edit_wish',array('id'=>$vo['id']))}">{:lang('EDIT')}</a>
                         <a href="{:url('AdminArticle/delete',array('id'=>$vo['id']))}" class="js-ajax-delete">{:lang('DELETE')}</a>
                     </td>
                 </tr>
@@ -158,10 +156,9 @@
                     <th width="50">{:lang('SORT')}</th>
                 </notempty>
                 <th width="50">ID</th>
-                <th>活动名称</th>
-                <th width="100">活动日期</th>
+                <th>心愿名称</th>
                 <!--  -->
-                <th width="90">奖励积分</th>
+                <th width="90">实现积分</th>
                 <th width="160">缩略图</th>
                 <th width="130">更新时间</th>
                 <th width="130">发布时间</th>
