--- a/public/themes/mobile/default/portal/memory.html
+++ b/public/themes/mobile/default/portal/memory.html
@@ -39,36 +39,10 @@
             </div>
             <!--页面标题栏结束-->
             <!--页面主内容区开始-->
-            <div class="mui-page-content">
-                <div class="mui-scroll-wrapper">
-                   <ul class="mui-table-view mui-table-view-chevron" id="list">
-                        <php>
-                            $user=cmf_get_current_user();
-                            $where=[
-                                'post.create_time'=>['egt',0],
-                                'post.post_type'=>1,
-                                'post.user_id'=>$user['id']
-                            ];
-                            $page=[
-                                'list_rows'=>10,
-                                'next'=>'下一页',
-                                'prev'=>'上一页'
-                            ];
-                        </php>
-                        <portal:articles item="vo" where="$where" order="post.create_time DESC" page="$page"
-                                         relation="categories"
-                                         categoryIds="$category.id"
-                                         returnVarName="articles_data">
-                             <li class="mui-table-view-cell mui-media">
-                                <a href="{:cmf_url('portal/Article/index',array('id'=>$vo['id'],'cid'=>$category['id'],'type'=>$vo['post_type']))}">
-                                    <img class="mui-media-object mui-pull-left" src="">
-                                    <div class="mui-media-body">
-                                        {$vo.post_title}
-                                        <p class='mui-ellipsis'>时间：{:date('Y-m-d',$vo.published_time)}</p>
-                                    </div>
-                                </a>
-                            </li>            
-                        </portal:articles>
+             <div class="mui-content  mui-scroll-wrapper" id="pullrefresh">
+                <div class="mui-scroll">
+                    <input type="hidden" id="page" value="1">
+                    <ul class="mui-table-view mui-table-view-chevron" id="list">
                     </ul>
                 </div>
             </div>
@@ -120,13 +94,76 @@
 <script src="__STATIC__/mui/js/mui.poppicker.js"></script>
 <script type="text/javascript" charset="utf-8">
     
-    mui.init();
     //初始化单页view
     var viewApi = mui('#app').view({
         defaultPage: '#memory'
     });
     //初始化单页的区域滚动
     mui('.mui-scroll-wrapper').scroll();
+
+    mui.init({
+        pullRefresh: {
+            container: '#pullrefresh',
+            up: {
+                auto:true,
+                contentrefresh: '正在加载...',
+                callback: pullupRefresh
+            }
+        }
+    });
+
+    window.page = document.getElementById('page').value;
+    function pullupRefresh() {
+         mui.ajax('{:cmf_url("portal/list/ajax_get_list")}',{
+            data:{
+                id: "{$category.id}",
+                post_type: 4,
+                page: window.page
+            },
+            dataType:'json',//服务器返回json格式数据
+            type:'post',//HTTP请求类型
+            timeout:5000,//超时时间设置为5秒；
+            headers:{'Content-Type':'application/json'},                  
+            success:function(data){
+                if (data.code == 1) {
+                    mui('#pullrefresh').pullRefresh().endPullupToRefresh(false); //参数为true代表没有更多数据了。
+                    addData(data.data.articles);
+                    window.page = data.data.page;
+                    mui.toast("加载了" + data.data.size + "条记录");
+                } else {
+                    mui('#pullrefresh').pullRefresh().endPullupToRefresh(true);
+                    mui.toast(data.msg);
+                }
+               
+            },
+            error:function(xhr,type,errorThrown){
+                //异常处理；
+                console.log(type);
+            }
+        });
+    }
+
+    function addData(data) {
+        var table = document.body.querySelector('.mui-table-view');
+        for(var i = 0, len = data.length; i < len; i++) {
+            var li = document.createElement('li');
+            li.className = 'mui-table-view-cell  mui-media';
+            li.innerHTML = '<a href="' + data[i].url + '" class="a-link">' +
+                                '<img class="mui-media-object mui-pull-left" src="' + data[i].imgUrl + '">' +
+                                '<div class="mui-media-body">' +
+                                    data[i].post_title +
+                                    '<p class="mui-ellipsis">时间：' + data[i].published_time + '</p>' +
+                                '</div>' +
+                            '</a>' +
+                            '<a href="' + data[i].url + '" class="mui-btn mui-btn-primary a-link">我要报名</a>';
+            //下拉刷新，新纪录插到最前面；
+            table.appendChild(li);
+        }
+        mui('.mui-table-view-cell').on('tap', 'a',function(e) {
+            window.location.href = this.href;
+        });
+    }
+
 
     // 表单提交
     var ajaxForm_list = $('form.js-mobile-ajax-form');
