--- a/public/themes/admin/default/portal/admin_article/add_dynamic.html
+++ b/public/themes/admin/default/portal/admin_article/add_dynamic.html
@@ -58,10 +58,12 @@
                         </td>
                     </tr>
                     <tr>
-                        <th>活动日期<span class="form-required">*</span></th>
+                        <th>报名时间<span class="form-required">*</span></th>
                         <td>
-                           <input class="form-control js-bootstrap-date" type="text" name="post[more][active_date]" style="width:300px;"
-                                   id="title" required value="" placeholder="活动日期"/>
+                            <input class="form-control js-bootstrap-datetime" type="text" name="post[more][active_start_date]" style="display:inline-block; width:300px;"
+                                   id="title" required value="" placeholder="报名开始时间"/>&nbsp;&nbsp;--&nbsp;&nbsp;
+                            <input class="form-control js-bootstrap-datetime" type="text" name="post[more][active_end_date]" style="display:inline-block; width:300px;"
+                                   id="title" required value="" placeholder="报名结束时间"/>
                         </td>
                     </tr>
                     <tr>
